charts/rabbitmq/tests/golden/fixtures/httproute.golden.yaml
---
# Source: rabbitmq/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: golden-file-test-rabbitmq
  namespace: "test-namespace"
  labels:
    app.kubernetes.io/instance: golden-file-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/version: 4.0.9
spec:
  parentRefs:
    - name: my-gateway
      namespace: gateway-system
      sectionName: https
  hostnames:
    - rabbitmq.test.com
    - rabbitmq-alt.test.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: golden-file-test-rabbitmq
          port: 15672
